crates/biome_cli/tests/snapshots/main_cases_handle_astro_files/format_astro_with_typescript_script_tag.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --write file.astro
```

## `biome.json`

```json
{
  "html": {
    "formatter": { "enabled": true },
    "linter": { "enabled": true },
    "experimentalFullSupportEnabled": true
  }
}
```

## `file.astro`

```astro
---
const title = "My Page";
---

<html>
	<body>
		<script>
		const message: string = "Hello TypeScript";
		function greet(name: string): void {
			console.log(message + ", " + name);
		}
		</script>
	</body>
</html>

```

# Emitted Messages

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
