crates/biome_cli/tests/snapshots/main_cases_handle_astro_files/format_indents_astro_map_expression.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --write file.astro
```

## `biome.json`

```json
{
  "html": {
    "experimentalFullSupportEnabled": true,
    "formatter": { "enabled": true }
  }
}
```

## `file.astro`

```astro
<section>
	<div class="featured-users-grid">
		{featuredUsers.map((user) => (
			<div class="featured-user-card">
				<span class="user-name">{user.data.id}</span>
			</div>
		))}
	</div>
	<p>
		Hello {user.name}, you have
		{items.filter((item) => item.isActive && item.owner === user.id).length}
		active items
	</p>
</section>

```

# Emitted Messages

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
