crates/biome_cli/tests/snapshots/main_cases_handle_astro_files/format_stdin_write_successfully.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --write --stdin-file-path file.astro
```

# Input messages

```block
---
import {    something } from "file.astro";

statement ( ) ;

---
<div></div>
```

# Emitted Messages

```block
---
import { something } from "file.astro";

statement();
---
<div></div>
```
