crates/biome_cli/tests/snapshots/main_cases_handle_astro_files/full_support.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check --write --unsafe file.astro
```

## `biome.json`

```json
{
  "html": {
    "formatter": { "enabled": true },
    "linter": { "enabled": true },
    "experimentalFullSupportEnabled": true
  }
}
```

## `file.astro`

```astro
---
import { sure } from "sure.js";
import z from "zod";

// Always considered as used
interface Props {
	name: string;
}

type Props = {
	name: string;
};

// Still reported as unused
interface Foo {
	name: string;
}

type Bar = {
	name: string;
};

function _doSomething() {
	// Still reported as unused, Props interface must be at top-level
	interface Props {
		name: string;
	}

	type Props = {
		name: string;
	};
}

const { name } = Astro.props;

let schema = z.object().optional();
schema + sure();
---

<html>
	<head>
		<title>Astro</title>
	</head>
	<body></body>
</html>

<style>
#id {
	font-family: comic-sans;
}
.class {
	background: red;
}
:global(div) {
	color: red;
}
</style>

```

# Termination Message

```block
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
file.astro:15:11 lint/correctness/noUnusedVariables ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! This interface Foo is unused.
  
    14 │ // Still reported as unused
  > 15 │ interface Foo {
       │           ^^^
    16 │ 	name: string;
    17 │ }
  
  i Unused variables are often the result of typos, incomplete refactors, or other sources of bugs.
  

```

```block
file.astro:19:6 lint/correctness/noUnusedVariables ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! This type alias Bar is unused.
  
    17 │ }
    18 │ 
  > 19 │ type Bar = {
       │      ^^^
    20 │ 	name: string;
    21 │ };
  
  i Unused variables are often the result of typos, incomplete refactors, or other sources of bugs.
  

```

```block
file.astro:25:12 lint/correctness/noUnusedVariables ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! This interface Props is unused.
  
    23 │ function _doSomething() {
    24 │ 	// Still reported as unused, Props interface must be at top-level
  > 25 │ 	interface Props {
       │ 	          ^^^^^
    26 │ 		name: string;
    27 │ 	}
  
  i Unused variables are often the result of typos, incomplete refactors, or other sources of bugs.
  

```

```block
file.astro:29:7 lint/correctness/noUnusedVariables ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! This type alias Props is unused.
  
    27 │ 	}
    28 │ 
  > 29 │ 	type Props = {
       │ 	     ^^^^^
    30 │ 		name: string;
    31 │ 	};
  
  i Unused variables are often the result of typos, incomplete refactors, or other sources of bugs.
  

```

```block
file.astro:34:9 lint/correctness/noUnusedVariables ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! This variable name is unused.
  
    32 │ }
    33 │ 
  > 34 │ const { name } = Astro.props;
       │         ^^^^
    35 │ 
    36 │ let schema = z.object().optional();
  
  i Unused variables are often the result of typos, incomplete refactors, or other sources of bugs.
  

```

```block
file.astro:40:1 lint/a11y/useHtmlLang ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Provide a lang attribute when using the html element.
  
    38 │ ---
    39 │ 
  > 40 │ <html>
       │ ^^^^^^
    41 │ 	<head>
    42 │ 		<title>Astro</title>
  
  i Setting a lang attribute on HTML document elements configures the language used by screen readers when no user default is specified.
  

```

```block
file.astro:10:6 lint/suspicious/noRedeclare ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × 'Props' is redeclared in the same scope.
  
     8 │ }
     9 │ 
  > 10 │ type Props = {
       │      ^^^^^
    11 │ 	name: string;
    12 │ };
  
  i 'Props' is defined here:
  
    5 │ // Always considered as used
  > 6 │ interface Props {
      │           ^^^^^
    7 │ 	name: string;
    8 │ }
  
  i Redeclarations make it unclear which variable a reference points to and can hide earlier declarations.
  
  i Remove the duplicate declaration or rename one of the variables.
  

```

```block
file.astro:29:7 lint/suspicious/noRedeclare ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × 'Props' is redeclared in the same scope.
  
    27 │ 	}
    28 │ 
  > 29 │ 	type Props = {
       │ 	     ^^^^^
    30 │ 		name: string;
    31 │ 	};
  
  i 'Props' is defined here:
  
    23 │ function _doSomething() {
    24 │ 	// Still reported as unused, Props interface must be at top-level
  > 25 │ 	interface Props {
       │ 	          ^^^^^
    26 │ 		name: string;
    27 │ 	}
  
  i Redeclarations make it unclear which variable a reference points to and can hide earlier declarations.
  
  i Remove the duplicate declaration or rename one of the variables.
  

```

```block
file.astro:49:15 lint/a11y/useGenericFontNames ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Generic font family missing.
  
    47 │ <style>
    48 │ #id {
  > 49 │ 	font-family: comic-sans;
       │ 	             ^^^^^^^^^^
    50 │ }
    51 │ .class {
  
  i Consider adding a generic font family as a fallback.
  
  i For examples and more information, see the MDN Web Docs
  
  - serif
  - sans-serif
  - monospace
  - etc.
  

```

```block
Checked 1 file in <TIME>. Fixed 1 file.
Found 4 errors.
Found 5 warnings.
```
