crates/biome_cli/tests/snapshots/main_cases_handle_astro_files/lint_and_fix_astro_files.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint --write --unsafe file.astro
```

## `file.astro`

```astro
---

---
<div></div>
```

# Emitted Messages

```block
Checked 1 file in <TIME>. Fixed 1 file.
```
