crates/biome_cli/tests/snapshots/main_cases_handle_astro_files/lint_astro_files.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint file.astro
```

## `file.astro`

```astro
---
debugger;
---
<div></div>
```

# Termination Message

```block
lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
file.astro:2:1 lint/suspicious/noDebugger  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × This is an unexpected use of the debugger statement.
  
    1 │ ---
  > 2 │ debugger;
      │ ^^^^^^^^^
    3 │ ---
    4 │ <div></div>
  
  i Unsafe fix: Remove debugger statement
  
    1 │ debugger;
      │ ---------

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
